@@ -1,6 +1,7 @@
 Adminer dev:
 PostgreSQL: Do not alter indexes with expressions
 PostgreSQL: Fix export of indexes with expressions (bug #768)
+PostgreSQL: Export ENUM types (bug #587)
 SQLite: Support CHECK constraint
 SQLite: Add command Check tables
 SQLite: Display all rows of variable values
